# LeafTipTriangulation

./: CMakeLists.txt  LeafTipTriangulation.sln  LeafTipTriangulation.sln.DotSettings  LeafTipTriangulationProject.sln.DotSettings  README.md  run.sh  run_benchmark.sh  run_phenotyping.sh  run_phenotyping_graph.sh
LeafTipTriangulation/: CMakeLists.txt  Camera.cpp  Camera.h  ExportScene.cpp  ExportScene.h  LeafTipTriangulation.vcxproj  LeafTipTriangulation.vcxproj.filters  OBJWriter.cpp  OBJWriter.h  Phenotyping.cpp  Phenotyping.h  RayMatching.cpp  RayMatching.h  Reconstruction.cpp  Reconstruction.h  SyntheticData.cpp  SyntheticData.h  Triangulation.cpp  Triangulation.h  main.cpp
LeafTipTriangulation/cameras/: camera_0.txt  camera_144.txt  camera_288.txt  camera_72.txt  camera_top.txt
LeafTipTriangulationLib/: CMakeLists.txt
LeafTipTriangulationLib/include/: Camera.h  Constants.h  ConvertUtils.h  Ray.h  RayMatching.h  Triangulation.h  Types.h
LeafTipTriangulationLib/include/utils/: warnoff.h
LeafTipTriangulationLib/src/: Camera.cpp  ConvertUtils.cpp  Ray.cpp  RayMatching.cpp  Reconstruction.cpp  Triangulation.cpp
LeafTipTriangulationPython/: CMakeLists.txt  crocodile_example.py  main.cpp  phenotyping_example.py  requirements.txt
LeafTipTriangulationTest/: CMakeLists.txt  main.cpp  test.cpp
Phenotyping/: calibration.csv  sorghum_2018_leaf_tips.csv
Phenotyping/cameras/: camera_0_108_0.txt  camera_0_144_0.txt  camera_0_72_0.txt  camera_216.txt
Phenotyping/plants/: Readme.md
Phenotyping/plants/3-10-22-Schnable-Sorghum_310-217-42-1-BTx623_2022-03-11_15-12-11.064_5209100/: leaf_tips.csv
Phenotyping/plants/3-10-22-Schnable-Sorghum_310-219-42-3-BTx623_2022-03-11_15-17-51.394_5209300/: leaf_tips.csv
Phenotyping/plants/4-9-18_Schnable_49-281-JS39-65_2018-04-23_12-09-34_10675800/: calibrations.csv  leaf_tips.csv
Phenotyping/plants/4-9-18_Schnable_49-281-JS39-65_2018-05-07_12-09-47_11505700/: calibrations.csv  leaf_tips.csv
Phenotyping/scripts/: .gitignore  compare_to_ground_truth.py  convert_cvat_to_csv.py
Phenotyping/sorghum_2018/: calibration.csv  leaf_tips.csv  tv_90_rotation.txt
Phenotyping/sorghum_2018/annotations/: ground_truth.csv
Phenotyping/sorghum_2018/cameras/: camera_0_0_0.txt  camera_top_0_90_0.txt
Phenotyping/sorghum_2018_synthetic/: Readme.md  leaf_tips.csv  setup_config.txt
Phenotyping/sorghum_2018_synthetic/annotations/: ground_truth.csv  ground_truth_position.txt
Phenotyping/sorghum_2018_synthetic/cameras/: camera_0_216_0.txt  camera_0_288_0.txt  camera_0_36_0.txt
Phenotyping/sorghum_2022/: calibration.csv  leaf_tips.csv  setup_config.txt  tv_90_rotation.txt
Phenotyping/sorghum_2022/annotations/: Readme.md  annotations.xml  compare_to_ground_truth.py  ground_truth.csv  plant_list.xlsx
Phenotyping/sorghum_2022/annotations/scripts/: compare_to_ground_truth.py  convert_cvat_to_csv.py
Phenotyping/sorghum_2022/cameras/: camera_0_108_0.txt  camera_0_144_0.txt  camera_0_288_0.txt  camera_0_324_0.txt  camera_0_36_0.txt  camera_0_72_0.txt  camera_top_0_90_0.txt
Phenotyping/sorghum_2022_synthetic/: Readme.md  leaf_tips.csv  setup_config.txt
Phenotyping/sorghum_2022_synthetic/annotations/: ground_truth.csv  ground_truth_position.txt
Phenotyping/sorghum_2022_synthetic/cameras/: camera_0_0_0.txt  camera_0_216_0.txt  camera_0_252_0.txt
cmake/: catch2.cmake  dlib.cmake  glm.cmake  opencv.cmake  pybind11.cmake  spdlog.cmake
jobs/: README.md  compile.sh  run_benchmark.sh  run_benchmark.sub  run_phenotyping.sub  run_phenotyping_graph.sub
plots/: accuracy_cameras.pg  correspondence_noise.pg  correspondence_threshold_1.pg  correspondence_threshold_2.pg  phenotyping_agreement.pg  phenotyping_agreement_prob.pg  phenotyping_agreement_theta.pg  phenotyping_rmse.pg  phenotyping_rmse_theta.pg  runtime_cameras.pg  runtime_points.pg
results/: generate_makefile.py
